syntax = "proto3";
package proto;

option go_package = "./proto";

message WarriorTalents {
	// Arms
	int32 improved_heroic_strike = 1;
	int32 deflection = 2;
	int32 improved_rend = 3;
	int32 improved_charge = 4;
	int32 tactical_mastery = 5;
	int32 improved_thunder_clap = 6;
	int32 improved_overpower = 7;
	bool anger_management = 8;
	int32 deep_wounds = 9;
	int32 two_handed_weapon_specialization = 10;
	int32 impale = 11;
	int32 axe_specialization = 12;
	bool sweeping_strikes = 13;
	int32 mace_specialization = 14;
	int32 sword_specialization = 15;
	int32 polearm_specialization = 16;
	int32 improved_hamstring = 17;
	bool mortal_strike = 18;

	// Fury
	int32 booming_voice = 19;
	int32 cruelty = 20;
	int32 improved_demoralizing_shout = 21;
	int32 unbridled_wrath = 22;
	int32 improved_cleave = 23;
	bool piercing_howl = 24;
	int32 blood_craze = 25;
	int32 improved_battle_shout = 26;
	int32 dual_wield_specialization = 27;
	int32 improved_execute = 28;
	int32 enrage = 29;
	int32 improved_slam = 30;
	bool death_wish = 31;
	int32 improved_intercept = 32;
	int32 improved_berserker_rage = 33;
	int32 flurry = 34;
	bool bloodthirst = 35;

	// Protection
	int32 shield_specialization = 36;
	int32 anticipation = 37;
	int32 improved_bloodrage = 38;
	int32 toughness = 39;
	int32 iron_will = 40;
	bool last_stand = 41;
	int32 improved_shield_block = 42;
	int32 improved_revenge = 43;
	int32 defiance = 44;
	int32 improved_sunder_armor = 45;
	int32 improved_disarm = 46;
	int32 improved_taunt = 47;
	int32 improved_shield_wall = 48;
	bool concussion_blow = 49;
	int32 improved_shield_bash = 50;
	int32 one_handed_weapon_specialization = 51;
	bool shield_slam = 52;
}

enum WarriorShout {
	WarriorShoutNone = 0;
	WarriorShoutBattle = 1;
	WarriorShoutCommanding = 2;
}

enum WarriorStance {
	WarriorStanceNone = 0;
	WarriorStanceBattle = 1;
	WarriorStanceDefensive = 2;
	WarriorStanceBerserker = 3;
	WarriorStanceGladiator = 4;
}

message Warrior {
	message Rotation {
	}

	message Options {
		reserved 2;
		reserved "use_recklessness";

		double starting_rage = 1;
		bool stance_snapshot = 6;
		int32 queue_delay = 8;

		WarriorShout shout = 3;
		WarriorStance stance = 7;
	}
	Options options = 3;
}

message TankWarrior {
	message Rotation {
	}

	message Options {
		double starting_rage = 1;
		bool stance_snapshot = 6;
		int32 queue_delay = 8;

		WarriorShout shout = 3;
		WarriorStance stance = 7;
	}
	Options options = 3;
}
